# vaultio

./: .gitignore  .gitmodules  API.md  README.md
python/: pyproject.toml
python/src/pybw/: __init__.py  build.py  cli.py  client.py  install.py  server.py  util.py
python/src/pybw/examples/: backup.py  shell.py
python/src/vaultio/: client.py  server.py
python/src/vaultio/examples/: backup.py
python/src/vaultio/scripts/: build.py
python/src/vaultio/vault/: api.py  vault_sync.py
python/src/vaultio_examples/: sync.py
