[project]
name = "pybw"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Lenihan", email = "p.j.lenihan1@leeds.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nodeenv (>=1.9.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pybw", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install-bwcli = "pybw.install:main"